cancel and rerun component tasks
