# src/TeamCloud.Azure.Resources/AzureResourceProvisioningState.cs
@@ -1,0 +1,16 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Text;
+
+namespace TeamCloud.Azure.Resources
+{
+    public enum AzureResourceProvisioningState
+    {
+        Canceled,
+        Deleting,
+        Failed,
+        InProgress,
+        Succeeded,
+        Unknown
+    }
+}
